# silk-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: default.frag  default.vert
include/: engine.h
src/: main.c  map_editor.c
toolchain/: engine_import.cmake
